add CounterStack class to project add CounterStack.cpp and CounterStack.h to project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(MidTermProject)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(MidTermProject main.cpp CircularQueue.cpp CircularQueue.h)
+add_executable(MidTermProject main.cpp CircularQueue.cpp CircularQueue.h CounterStack.cpp CounterStack.h)
